--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a href="" class="logo logo-header"
@@ -31,6 +31,13 @@
             <li class="item"><a href="#contacts" class="link">Контакты</a></li>
           </ul>
         </nav>
+
+<button class="burger-btn js-open-menu " aria-expanded="false"
+          aria-controls="mobile-menu">
+  <svg class="burger-btn-svg" width="24px" height="16px">
+                <use href="./images/icons.svg#icon-burger"></use>
+              </svg>
+</button>
 
         <ul class="auth-nav list">
           <li class="item">
@@ -52,7 +59,26 @@
           </li>
         </ul>
       </div>
-    </header> -->
+
+      <!---- Burger-menu ---->
+
+ <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+       <svg class="icon-close" width="18px" height="18px">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="" class="link">О нас</a></li>
+        <li><a href="" class="link">Работы</a></li>
+        <li><a href="" class="link">Контакты</a></li>
+        <li><a href="" class="link">Карьера</a></li>
+      </ul>
+    </div>
+
+    
+    </header>
     <main>
       <!--Герой-->
       <section class="hero">
@@ -534,6 +560,8 @@
       </div>
     </footer>
 
+
+    <!---- modal ---->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" data-modal-close>
@@ -632,5 +660,12 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
