--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo logo-header"
@@ -30,6 +30,16 @@
             <li class="item"><a href="#contacts" class="link">Контакты</a></li>
           </ul>
         </nav>
+
+        <button
+          class="burger-btn js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="burger-btn-svg" width="24px" height="16px">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
 
         <ul class="auth-nav list">
           <li class="item">
@@ -51,7 +61,24 @@
           </li>
         </ul>
       </div>
-    </header> -->
+
+      <!---- Burger-menu ---->
+
+      <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+          <svg class="icon-close" width="18px" height="18px">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+        <ul class="mobile-menu">
+          <li><a href="" class="link">О нас</a></li>
+          <li><a href="" class="link">Работы</a></li>
+          <li><a href="" class="link">Контакты</a></li>
+          <li><a href="" class="link">Карьера</a></li>
+        </ul>
+      </div>
+    </header>
 
     <main>
       <section class="section">
