--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <div>
        <nav>
-                <ul class="mobile-menu list">
+                <ul class="mobile-menu-list list">
                     <li class="mobile-menu">
                         <a class="mobile-menu mobile-menu-current" href= "./index.html">Студия</a>
                     </li>
@@ -586,6 +586,7 @@
               <svg class="subscription-form-icon" width="24px" height="24px">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
+              
               <button type="submit" class="subscription-form-submit button">
                 Подписаться
               </button>
