--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </nav>
             <ul class="mobile-contacts list">
                 <li class="mobile-contact__item">
-                    <a class="mobile-contact__link-tel" href="tel:+380961111111">+380961111111</a>
+                    <a class="mobile-contact__link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
                 <li class="mobile-contact__item">
                     <a class="mobile-contact__link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
