--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,7 @@
           </ul>
         </nav>
 
-        <button
-          class="burger-btn js-open-menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
-        >
+        <button class="burger-btn" data-menu-open>
           <svg class="burger-btn-svg" width="24px" height="16px">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
@@ -64,19 +60,56 @@
 
       <!---- Burger-menu ---->
 
-      <div class="menu-container js-menu-container" id="mobile-menu">
-        <button class="menu-toggle js-close-menu">
-          <svg class="icon-close" width="18px" height="18px">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
+      <div class="mobile-menu" data-menu>
+        <div class="mobile-container">
+          <button class="mobile-menu__close-btn" data-menu-close>
+            <svg class="mobile-menu__close-icon" width="18px" height="18px">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
 
-        <ul class="mobile-menu">
-          <li><a href="" class="link">О нас</a></li>
-          <li><a href="" class="link">Работы</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-          <li><a href="" class="link">Карьера</a></li>
-        </ul>
+          <ul class="mobile-nav-list">
+            <li class="mobile-nav-list-item list">
+              <a href="./index.html" class="mobile-nav-list-link">Студия</a>
+            </li>
+            <li class="mobile-nav-list-item list">
+              <a href="./portfolio.html" class="mobile-nav-list-link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="mobile-nav-list-item list">
+              <a href="" class="mobile-nav-list-link">Контакты</a>
+            </li>
+          </ul>
+
+          <ul class="mobile-contacts-list">
+            <li class="mobile-contacts-list-item list">
+              <a href="" class="mobile-contacts-list-link-tel"
+                >+38 096 111 11 11</a
+              >
+            </li>
+            <li class="mobile-contacts-list-item list">
+              <a href="" class="mobile-contacts-list-link-email"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+
+          <ul class="mobile-social-list list">
+            <li class="mobile-social-list-item list">
+              <a href="" class="mobile-social-list-link"> Instagram </a>
+            </li>
+            <li class="mobile-social-list-item list">
+              <a href="" class="mobile-social-list-link"> Twitter </a>
+            </li>
+            <li class="mobile-social-list-item list">
+              <a href="" class="mobile-social-list-link"> Facebook </a>
+            </li>
+            <li class="mobile-social-list-item list">
+              <a href="" class="mobile-social-list-link"> LinkedIn </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -852,6 +885,6 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script defer src="js/mobile-menu.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
