--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="title">Внимание к деталям</h3>
+              <h3 class="title features-title-mobile">Внимание к деталям</h3>
               <p class="features-list__description">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
