--- a/portfolio.html
+++ b/portfolio.html
@@ -791,70 +791,71 @@
 
     <footer class="contacts" id="contacts">
       <div class="container container-footer">
-        <div class="container-address">
-          <a href="./" class="logo logo-footer"
-            ><span class="logo-accent"> Web</span>Studio</a
-          >
-          <address>
-            <ul class="list">
-              <li class="address-item">
-                <a
-                  class="map link address"
-                  href="https://goo.gl/maps/K4oWXbqAfrU8sRuB9"
-                  target="blank"
-                  rel="noopener noreferrer"
-                >
-                  г. Киев, пр-т Леси Украинки, 26</a
-                >
+        <div class="container-address-social">
+          <div class="container-address">
+            <a href="./" class="logo logo-footer"
+              ><span class="logo-accent"> Web</span>Studio</a
+            >
+            <address>
+              <ul class="list">
+                <li class="address-item">
+                  <a
+                    class="map link address"
+                    href="https://goo.gl/maps/K4oWXbqAfrU8sRuB9"
+                    target="blank"
+                    rel="noopener noreferrer"
+                  >
+                    г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="address-item">
+                  <a href="mailto:info@devstudio.com" class="contacts-link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="address-item">
+                  <a href="tel:+380961111111" class="contacts-link"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="social-media list">
+            <p class="footer-form-title">Присоединяйтесь</p>
+            <ul class="social-media-list social-media-footer list">
+              <li class="social-media-item">
+                <a href="#" class="social-media-link media-link-footer">
+                  <svg class="social-media-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-item">
-                <a href="mailto:info@devstudio.com" class="contacts-link"
-                  >info@devstudio.com</a
-                >
+              <li class="social-media-item">
+                <a href="#" class="social-media-link media-link-footer">
+                  <svg class="social-media-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address-item">
-                <a href="tel:+380961111111" class="contacts-link"
-                  >+38 096 111 11 11</a
-                >
+              <li class="social-media-item">
+                <a href="#" class="social-media-link media-link-footer">
+                  <svg class="social-media-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a href="#" class="social-media-link media-link-footer">
+                  <svg class="social-media-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
-
-        <div class="social-media list">
-          <p class="footer-form-title">Присоединяйтесь</p>
-          <ul class="social-media-list social-media-footer list">
-            <li class="social-media-item">
-              <a href="#" class="social-media-link media-link-footer">
-                <svg class="social-media-icon" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="#" class="social-media-link media-link-footer">
-                <svg class="social-media-icon" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="#" class="social-media-link media-link-footer">
-                <svg class="social-media-icon" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="#" class="social-media-link media-link-footer">
-                <svg class="social-media-icon" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-
         <div class="subscription">
           <form action="#" class="">
             <p class="footer-form-title">Подпишитесь на рассылку</p>
@@ -870,6 +871,7 @@
               <svg class="subscription-form-icon" width="24px" height="24px">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
+
               <button type="submit" class="subscription-form-submit button">
                 Подписаться
               </button>
@@ -878,7 +880,6 @@
         </div>
       </div>
     </footer>
-
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
